examples/test/testpolicy5901.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5901
  namespace: namespace290
spec:
  podSelector:
    matchLabels:
      key42: value47
      key13: value38
      key31: value1
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key35: value19
          key40: value32
      podSelector:
        matchLabels:
          key17: value16
          key30: value47
          key39: value34
